reportportal/analyzer-stateful-set.yml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: reportportal-analyzer
  labels:
    app.kubernetes.io/name: reportportal
    app.kubernetes.io/component: analyzer
spec:
  replicas: 0
  selector:
    matchLabels:
      app.kubernetes.io/name: reportportal
      app.kubernetes.io/component: analyzer
  serviceName: reportportal-analyzer
  template:
    metadata:
      labels:
        app.kubernetes.io/name: reportportal
        app.kubernetes.io/component: analyzer
    spec:
      containers:
        - env:
            - name: RP_AMQP_USR
              valueFrom:
                secretKeyRef:
                  key: RABBITMQ_USERNAME
                  name: rabbitmq
            - name: RP_AMQP_PASS
              valueFrom:
                secretKeyRef:
                  key: RABBITMQ_PASSWORD
                  name: rabbitmq
            - name: AMQP_URL
              value: amqp://$(RP_AMQP_USR):$(RP_AMQP_PASS)@rabbitmq:5672
            - name: AMQP_EXCHANGE_NAME
              value: analyzer-default
            - name: AMQP_VIRTUAL_HOST
              value: analyzer
            - name: ES_HOSTS
              value: http://elasticsearch:9200
            - name: ES_PROJECT_INDEX_PREFIX
              value: reportportal
          image: service-auto-analyzer
          name: analyzer
          ports:
            - containerPort: 8080
              protocol: TCP
          resources:
            limits: { }
            requests:
              cpu: 25m
              memory: 64Mi
          securityContext:
            runAsNonRoot: true
            runAsUser: 1001
