reportportal/jobs-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: reportportal-jobs
  labels:
    app.kubernetes.io/name: reportportal
    app.kubernetes.io/component: jobs
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: reportportal
      app.kubernetes.io/component: jobs
  template:
    metadata:
      labels:
        app.kubernetes.io/name: reportportal
        app.kubernetes.io/component: jobs
    spec:
      containers:
        - env:
            - name: RP_ENVIRONMENT_VARIABLE_CLEAN_ATTACHMENT_CRON
              value: 0 0 */24 * * *
            - name: RP_ENVIRONMENT_VARIABLE_CLEAN_LOG_CRON
              value: 0 0 */24 * * *
            - name: RP_ENVIRONMENT_VARIABLE_CLEAN_LAUNCH_CRON
              value: 0 0 */24 * * *
            - name: RP_ENVIRONMENT_VARIABLE_CLEAN_STORAGE_CRON
              value: 0 0 */24 * * *
            - name: RP_ENVIRONMENT_VARIABLE_STORAGE_PROJECT_CRON
              value: 0 */5 * * * *
            - name: RP_ENVIRONMENT_VARIABLE_CLEAN_STORAGE_CHUNKSIZE
              value: "1000"
            - name: RP_AMQP_ANALYZER-VHOST
              value: analyzer
            - name: RP_AMQP_HOST
              value: rabbitmq
            - name: RP_AMQP_PORT
              value: "5672"
            - name: RP_AMQP_USER
              valueFrom:
                secretKeyRef:
                  key: RABBITMQ_USERNAME
                  name: rabbitmq
            - name: RP_AMQP_PASS
              valueFrom:
                secretKeyRef:
                  key: RABBITMQ_PASSWORD
                  name: rabbitmq
            - name: RP_AMQP_APIPORT
              value: "15672"
            - name: RP_AMQP_APIUSER
              valueFrom:
                secretKeyRef:
                  key: RABBITMQ_USERNAME
                  name: rabbitmq
            - name: RP_AMQP_APIPASS
              valueFrom:
                secretKeyRef:
                  key: RABBITMQ_PASSWORD
                  name: rabbitmq
            - name: RP_DB_HOST
              value: postgres
            - name: RP_DB_PORT
              value: "5432"
            - name: RP_DB_NAME
              value: reportportal
            - name: RP_DB_USER
              valueFrom:
                secretKeyRef:
                  key: POSTGRES_USER
                  name: postgres-user
            - name: RP_DB_PASS
              valueFrom:
                secretKeyRef:
                  key: POSTGRES_PASSWORD
                  name: postgres-user
            - name: DATASTORE_TYPE
              value: minio
            - name: DATASTORE_MINIO_ENDPOINT
              value: http://minio:9000
            - name: RP_BINARYSTORE_MINIO_ACCESSKEY
              valueFrom:
                secretKeyRef:
                  key: MINIO_ROOT_USER
                  name: minio
            - name: RP_BINARYSTORE_MINIO_SECRETKEY
              valueFrom:
                secretKeyRef:
                  key: MINIO_ROOT_PASSWORD
                  name: minio
            - name: RP_PROCESSING_LOG_MAXBATCHSIZE
              value: "2000"
            - name: RP_PROCESSING_LOG_MAXBATCHTIMEOUT
              value: "6000"
            - name: RP_AMQP_MAXLOGCONSUMER
              value: "1"
            - name: JAVA_OPTS
              value: >
                -XX:MinRAMPercentage=60.0 
                -XX:MaxRAMPercentage=90.0
          image: service-jobs
          name: jobs
          ports:
            - containerPort: 8686
              protocol: TCP
          resources:
            limits:
              cpu: 200m
              memory: 256Mi
            requests:
              cpu: 100m
              memory: 128Mi
          readinessProbe:
            httpGet:
              path: /health
              port: 8686
            initialDelaySeconds: 60
            periodSeconds: 40
            timeoutSeconds: 5
            failureThreshold: 10
          livenessProbe:
            httpGet:
              path: /health
              port: 8686
            initialDelaySeconds: 60
            periodSeconds: 40
            timeoutSeconds: 5
            failureThreshold: 10
          securityContext:
            runAsNonRoot: true
            runAsUser: 1001
