reportportal/ui-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: reportportal-ui
  labels:
    app.kubernetes.io/name: reportportal
    app.kubernetes.io/component: ui
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: reportportal
      app.kubernetes.io/component: ui
  template:
    metadata:
      labels:
        app.kubernetes.io/name: reportportal
        app.kubernetes.io/component: ui
    spec:
      containers:
        - env:
            - name: RP_SERVER_PORT
              value: "8080"
          image: service-ui
          name: ui
          ports:
            - containerPort: 8080
              protocol: TCP
          volumeMounts:
            - mountPath: /var/cache/nginx
              name: cache
            - mountPath: /var/run
              name: run
          resources:
            limits: { }
            requests:
              cpu: 25m
              memory: 64Mi
          readinessProbe:
            httpGet:
              path: /health
              port: 8080
            initialDelaySeconds: 30
            periodSeconds: 10
            timeoutSeconds: 3
          securityContext:
            runAsNonRoot: true
            runAsUser: 1001
      volumes:
        - emptyDir: { }
          name: cache
        - emptyDir: { }
          name: run
