reportportal/analyzer-service.yml
apiVersion: v1
kind: Service
metadata:
  name: reportportal-analyzer
  labels:
    app.kubernetes.io/name: reportportal
    app.kubernetes.io/component: analyzer
spec:
  ports:
    - name: headless
      port: 8080
      protocol: TCP
      targetPort: 8080
  selector:
    app.kubernetes.io/name: reportportal
    app.kubernetes.io/component: analyzer
