reportportal/api-service.yml
apiVersion: v1
kind: Service
metadata:
  name: reportportal-api
  namespace: reportportal
  labels:
    app.kubernetes.io/name: reportportal
    app.kubernetes.io/component: api
spec:
  selector:
    app.kubernetes.io/name: reportportal
    app.kubernetes.io/component: api
  ports:
    - name: headless
      port: 8585
      protocol: TCP
      targetPort: 8585
