reportportal/index-service.yml
apiVersion: v1
kind: Service
metadata:
  name: reportportal-index
  labels:
    app.kubernetes.io/name: reportportal
    app.kubernetes.io/component: index
spec:
  selector:
    app.kubernetes.io/name: reportportal
    app.kubernetes.io/component: index
  ports:
    - name: headless
      port: 8080
      protocol: TCP
      targetPort: 8080
