reportportal/jobs-services.yml
apiVersion: v1
kind: Service
metadata:
  name: reportportal-jobs
  namespace: reportportal
  labels:
    app.kubernetes.io/name: reportportal
    app.kubernetes.io/component: jobs
spec:
  selector:
    app.kubernetes.io/name: reportportal
    app.kubernetes.io/component: jobs
  ports:
    - name: headless
      port: 8686
      protocol: TCP
      targetPort: 8686
