reportportal/uat-service.yml
apiVersion: v1
kind: Service
metadata:
  name: reportportal-uat
  namespace: reportportal
  labels:
    app.kubernetes.io/name: reportportal
    app.kubernetes.io/component: uat
spec:
  selector:
    app.kubernetes.io/name: reportportal
    app.kubernetes.io/component: uat
  ports:
    - name: headless
      port: 9999
      protocol: TCP
      targetPort: 9999
