reportportal/ui-service.yml
apiVersion: v1
kind: Service
metadata:
  name: reportportal-ui
  namespace: reportportal
  labels:
    app.kubernetes.io/name: reportportal
    app.kubernetes.io/component: ui
spec:
  selector:
    app.kubernetes.io/name: reportportal
    app.kubernetes.io/component: ui
  ports:
    - name: headless
      port: 8080
      protocol: TCP
      targetPort: 8080
